--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,11 @@ services:
     volumes:
       - /app/node_modules # do not try to map node_modules to current working directory to Docker's - a "bookmark"
       - .:/app # map local current working directory to Docker's /app, this enables rapid local development of the application without having the need to re-build and re-run the docker container. simply use the docker volume to reference the local file system
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes: 
+      - /app/node_modules
+      - .:/app
+    command: ['npm', 'test']
