--- a/simple-react-app/docker-compose.yml
+++ b/simple-react-app/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - /app/node_modules # do not try to map node_modules to current working directory to Docker's - a "bookmark"
+      - /app/node_modules # do not try to overwrite node_modules to current working directory to Docker's - a "bookmark"
       - .:/app # map local current working directory to Docker's /app, this enables rapid local development of the application without having the need to re-build and re-run the docker container. simply use the docker volume to reference the local file system
   tests:
     build:
