--- a/complex-multiple-apps/docker-compose.yml
+++ b/complex-multiple-apps/docker-compose.yml
@@ -4,6 +4,13 @@ services:
     image: 'postgres:latest'
   redis:
     image: 'redis:latest'
+  nginx:
+    restart: always
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./nginx
+    ports:
+      - '3000:80'
   api:
     build:
       dockerfile: Dockerfile.dev
@@ -23,13 +30,13 @@ services:
     build:
       dockerfile: Dockerfile.dev
       context: ./client
-      volumes:
-        - /app/node_modules
-        - ./client:/app
+    volumes:
+      - /app/node_modules
+      - ./client:/app
   worker:
     build:
       dockerfile: Dockerfile.dev
       context: ./worker
-      volumes:
-        - /app/node_modules
-        - ./worker:/app
+    volumes:
+      - /app/node_modules
+      - ./worker:/app
